# block-library

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Dockerfile.backend  Dockerfile.frontend  FEATURES.md  FINAL_SUMMARY.md  INTEGRATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SETUP.md  STRUCTURE.md  api_bridge.py  check_current_data.sql  docker-compose.yml  fix_supabase_policies.sql  index.html  nginx.conf  package-lock.json  package.json  requirements.txt  setup_new_supabase.sql  tailwind.config.js  test_fastapi.py  update_paths.sql  vite.config.ts
.github/: copilot-instructions.md  dependabot.yml
config/: library.yaml
docs/: ARCHITECTURE.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/resources/: Chamber19.BlockLibrary.AcadPlugin.deps.json  README.md
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src-tauri/src/commands/: cache.rs  catalog.rs  drive.rs  dwg.rs  mod.rs
processor/: Directory.Build.props  DwgConverter.sln  NuGet.Config  README.md
server/: accore_worker.py  analytics_engine.py  app.py  block_library_layout.py  dashboard_layout.py  enhanced_api_bridge.py  library_config.py  mini_block_viewer.py  ml_block_classifier.py  preview_widget.py  roots_manager.py  run_accore.py  scipy_curve_processor.py  service_manager.py  trimesh_geometry_processor.py
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
tools/: check-modules.sh  dev-checks.ps1  (+3 more)
(+62 files in other folders)
