[package]
name = "block-library"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "block_library_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
desktop-toolkit = { git = "https://github.com/chamber-19/desktop-toolkit", tag = "v2.7.3" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
litcrypt2 = "0.1"

[package.metadata.desktop-toolkit]
library-tag = "v2.7.3"
shim-tag    = "v2.7.3"
